{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 24,
  "lineage": "2b0cf601-03c4-8566-9cd2-2c6f29dd9747",
  "resources": [
    {
      "module": "module.ec2_proxy",
      "mode": "managed",
      "type": "aws_instance",
      "name": "master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040a1551f9c9d11ad",
            "arn": "arn:aws:ec2:eu-central-1:970743847948:instance/i-0a7b21c7ed62b9091",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0a7b21c7ed62b9091",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "controller-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fd670ae040101357",
            "private_dns": "ip-172-31-35-113.eu-central-1.compute.internal",
            "private_ip": "172.31.35.113",
            "public_dns": "ec2-54-93-122-174.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.122.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00bb5e4c46b112695",
                "volume_size": 15,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "proxy-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-50100c2d",
            "tags": {
              "state": "test"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "2m",
              "delete": "2m"
            },
            "volume_tags": {
              "type": "default"
            },
            "vpc_security_group_ids": [
              "sg-0ab1de1a8cbb7ce7b"
            ]
          },
          "dependencies": [
            "module.ec2_proxy.aws_security_group.sg_for_my_ec2"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:970743847948:security-group/sg-09f774f69ad8a9437",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09f774f69ad8a9437",
            "ingress": [
              {
                "cidr_blocks": [
                  "109.252.110.0/24"
                ],
                "description": "Allow my workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a8f42e6fb4cdb9e8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-cluster",
            "name_prefix": null,
            "owner_id": "970743847948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terrafrom"
            },
            "timeouts": null,
            "vpc_id": "vpc-5922dc33"
          }
        }
      ]
    },
    {
      "module": "module.ec2_proxy",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_for_my_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:970743847948:security-group/sg-0ab1de1a8cbb7ce7b",
            "description": "SG for my proxy ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab1de1a8cbb7ce7b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "109.252.110.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "proxy-sg",
            "name_prefix": null,
            "owner_id": "970743847948",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-5922dc33"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker-node",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:970743847948:security-group/sg-0a8f42e6fb4cdb9e8",
            "description": "Security group for all nodes in the cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8f42e6fb4cdb9e8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate to each other",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09f774f69ad8a9437"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "terraform-eks-worker-node",
            "name_prefix": null,
            "owner_id": "970743847948",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-worker-node",
              "kuberenetes.io/cluster/eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-5922dc33"
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "109.252.110.0/24"
            ],
            "description": "Allow my workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-4254038186",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f774f69ad8a9437",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.eks-cluster"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow pods to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1597846473",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f774f69ad8a9437",
            "self": false,
            "source_security_group_id": "sg-0a8f42e6fb4cdb9e8",
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.eks-cluster",
            "module.eks.aws_security_group.worker-node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-node-ingress-self",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow node to communicate to each other",
            "from_port": 0,
            "id": "sgrule-18557053",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a8f42e6fb4cdb9e8",
            "self": false,
            "source_security_group_id": "sg-0a8f42e6fb4cdb9e8",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.worker-node"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker-node-ingress-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow worker kubelets and pods to receive communication from the cluster control plane",
            "from_port": 1025,
            "id": "sgrule-3968729380",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a8f42e6fb4cdb9e8",
            "self": false,
            "source_security_group_id": "sg-09f774f69ad8a9437",
            "to_port": 65535,
            "type": "ingress"
          },
          "dependencies": [
            "module.eks.aws_security_group.eks-cluster",
            "module.eks.aws_security_group.worker-node"
          ]
        }
      ]
    }
  ]
}